tests/ui/cilk/scope_cannot_use_uninit_vars.stderr
error[E0381]: used binding `x` is possibly-uninitialized
  --> $DIR/scope_cannot_use_uninit_vars.rs:15:9
   |
LL |         let x = cilk_spawn { fib(n - 1) };
   |             -              -------------- binding initialized here in some conditions
   |             |
   |             binding declared here but left uninitialized
LL |         let y = fib(n - 2);
LL |         x + y
   |         ^ `x` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
